log
Sun 11 Sep 2022 09:23:57 PM UTC: 
 tests:  0|6
total_score: 0/70
a7a99f6
Sun 11 Sep 2022 09:24:31 PM UTC: 
 hashmap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  4|5
total_score: 20/70
c909b1c
Sun 11 Sep 2022 09:25:37 PM UTC: 
 hashmap.c | 20 ++++++--------------
 1 file changed, 6 insertions(+), 14 deletions(-)
 tests:  4|5
total_score: 20/70
f1c4c8b
Sun 11 Sep 2022 09:38:30 PM UTC: 
 hashmap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
4a5a780
Sun 11 Sep 2022 09:45:33 PM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  6|3
total_score: 40/70
889079b
Sun 11 Sep 2022 09:51:39 PM UTC: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:90:12: error: expected ‘;’ before ‘:’ token
   90 |       pos=0:
      |            ^
      |            ;
Compilation failed
5753426
Sun 11 Sep 2022 09:51:45 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
fb85f48
Sun 11 Sep 2022 10:01:15 PM UTC: 
 hashmap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:101:48: error: expected statement before ‘)’ token
  101 |     if(is_equal(key,map->buckets[pos]->key)!=0)){
      |                                                ^
hashmap.c:101:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  101 |     if(is_equal(key,map->buckets[pos]->key)!=0)){
      |     ^~
hashmap.c:101:49: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  101 |     if(is_equal(key,map->buckets[pos]->key)!=0)){
      |                                                 ^
cc1: all warnings being treated as errors
Compilation failed
196f1e5
Sun 11 Sep 2022 10:01:27 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|1
total_score: 60/70
b576ede
Sun 11 Sep 2022 11:26:21 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  14|1
total_score: 60/70
766ca29
